--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,6 +14,11 @@ header {
   margin-right: 50px;
   font-weight: bold;
   color: #fff;
+  cursor: pointer;
+}
+
+.nav-pages li:hover {
+  color: #f61253;
 }
 
 .search-input {
@@ -38,4 +43,59 @@ header {
   padding: 5px 20px;
   border-radius: 3px;
   font-size: 14px;
+  cursor: pointer;
+}
+
+.btn-login:hover {
+  opacity: 0.9;
+}
+
+.banner-container {
+  height: 60vh;
+  background-image: url("../../assets/rear-view-excited-fans-having-fun-music-festival-taking-pictures-stage-with-their-smart-phones-copy-space_637285-607.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.banner-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  padding: 0 15%;
+}
+
+.banner-title {
+  font-size: 48px;
+  max-width: 60%;
+  margin-bottom: 25px;
+}
+
+.banner-subtitle {
+  font-size: 20px;
+  margin-bottom: 25px;
+}
+
+.btn-cta {
+  background-color: #f61253;
+  padding: 10px 25px;
+  border-radius: 20px;
+  font-size: 16px;
+  color: #fff;
+  display: flex;
+  width: fit-content;
+  font-weight: bold;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn-cta:hover {
+  opacity: 0.7;
+}
+
+.arrow-right {
+  font-size: 20px;
+  margin-left: 5px;
 }
