--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -50,7 +50,7 @@ header {
   opacity: 0.9;
 }
 
-.banner-container {
+.banner-section {
   height: 60vh;
   background-image: url("../../assets/rear-view-excited-fans-having-fun-music-festival-taking-pictures-stage-with-their-smart-phones-copy-space_637285-607.jpg");
   background-repeat: no-repeat;
@@ -98,4 +98,39 @@ header {
 .arrow-right {
   font-size: 20px;
   margin-left: 5px;
+}
+
+.browse-section {
+  background-color: #f4f2f2;
+  padding: 40px 10%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.browse-category {
+  width: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.browse-content {
+  height: 100px;
+  width: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.browse-icon {
+  font-size: 25px;
+}
+
+.browse-item {
+  font-size: 13px;
 }
