--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  all: unset;
+}
+
 ul,
 li {
   list-style-type: none;
@@ -27,4 +31,8 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
+}
+
+input {
+  outline: none;
 }
