--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -144,6 +144,7 @@ header {
 
 .explore-section {
   padding: 50px 10%;
+  border-bottom: 1px solid #f4f4f4;
 }
 
 .explore-tags {
@@ -237,19 +238,31 @@ header {
   cursor: pointer;
 }
 
+.explore-curve {
+  width: 100%;
+  height: 100px;
+}
+
+.explore-curve-bg {
+  width: 100%;
+  height: 100px;
+}
+
 .features-section {
-  /* border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc; */
-  padding: 50px 10%;
-  background-color: #f8f6f6;
+  /* border-top: 1px solid #ccc; */
+  /* border-bottom: 1px solid #ccc; */
+  padding: 10% 10%;
   display: flex;
   justify-content: space-between;
   height: 200px;
 }
 
 .feature-single {
-  background-color: #fff;
-  padding: 30px;
+  /* background-color: #fff; */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* padding: 30px; */
+  width: 22%;
+  height: 220px;
   border: 5px;
   display: flex;
   justify-content: center;
@@ -259,7 +272,8 @@ header {
 .mailinglist-section {
   display: flex;
   align-items: center;
-  padding: 5% 10%;
+  padding: 10% 10%;
+  background-color: #f4f4f4;
 }
 
 .mailinglist-heading {
@@ -281,7 +295,7 @@ header {
   height: 40px;
   border-radius: 5px;
   width: 18vw;
-  border: 1px solid #ccc;
+  border: 1px solid #f8f8f8;
   font-size: 16px;
   padding: 0 7px;
 }
