--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,11 @@
 header {
-  padding: 20px 10%;
+  padding: 0 10%;
   background-color: #1e2126;
   display: flex;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
+  width: 80%;
+  height: 80px;
 }
 
 .nav-links,
@@ -58,4 +60,8 @@ header {
 
 .btn-login:hover {
   opacity: 0.9;
+}
+
+.layout-container {
+  padding-top: 80px;
 }
