--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -26,8 +26,13 @@
   margin-bottom: 60px;
 }
 
-.auth-title {
-  margin-bottom: 50px;
+.auth-logo {
+  margin-bottom: 80px;
+  height: 80px;
+  width: 150px;
+  cursor: pointer;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
 .auth-input {
