--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,16 @@ header {
   justify-content: space-between;
   position: fixed;
   width: 80%;
-  height: 80px;
+  height: 90px;
   z-index: 1;
+  /* border-bottom: 1px solid #dfdede; */
+}
+
+.img-logo {
+  height: 40px;
+  width: 80px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .nav-links,
@@ -37,7 +45,7 @@ header {
 .search-input {
   height: 30px;
   width: 220px;
-  border: none;
+  border: 1px solid #ccc;
   outline: none;
   border-radius: 20px;
   padding: 0 10px;
@@ -64,5 +72,5 @@ header {
 }
 
 .layout-container {
-  padding-top: 80px;
+  padding-top: 90px;
 }
