--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,6 +22,7 @@ header {
   display: flex;
   align-items: center;
   color: #fff;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .nav-links li {
