--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -75,3 +75,37 @@ header {
 .layout-container {
   padding-top: 90px;
 }
+
+.header-icons {
+  display: flex;
+  align-items: center;
+}
+
+.cart-icon-wrapper {
+  margin-left: 30px;
+  position: relative;
+  cursor: pointer;
+  height: 25px;
+  width: 25px;
+}
+
+.cart-icon {
+  color: #fff;
+  height: 25px;
+  width: 25px;
+}
+
+.cart-count {
+  color: #ffffff;
+  position: absolute;
+  top: -8px;
+  right: -5px;
+  font-weight: bold;
+  background-color: #f61253;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
