--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -109,3 +109,76 @@ header {
   align-items: center;
   justify-content: center;
 }
+
+.cart-container {
+  position: fixed;
+  right: 0;
+  height: 100%;
+  width: 30%;
+  background-color: #fff;
+  border-left: 1px solid #ccc;
+  animation-name: fadeInRight;
+  animation-duration: 0.3s;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+
+.cart-content {
+  height: 100%;
+  width: calc(100% - 30px);
+  padding: 15px;
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.cart-header {
+  display: flex;
+  align-items: center;
+  height: 5%;
+}
+
+.cart-heading {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cart-close-btn {
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+}
+
+.cart-body {
+  height: calc(75% - 60px);
+  overflow-y: auto;
+  padding-top: 60px;
+}
+
+.cart-ticket {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.cart-footer {
+  height: 20%;
+  border-top: 1px solid #ccc;
+  padding-top: 20px;
+}
+
+.cart-items-summary {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
