--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,6 +43,10 @@ header {
   color: #f61253;
 }
 
+.search-input-container {
+  position: relative;
+}
+
 .search-input {
   height: 30px;
   width: 220px;
@@ -51,6 +55,16 @@ header {
   border-radius: 20px;
   padding: 0 10px;
   font-size: 15px;
+}
+
+.search-close-btn {
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+  position: absolute;
+  color: #000000;
+  left: 217px;
+  bottom: 7px;
 }
 
 .nav-controls li:nth-child(2) {
