Added responsive media queries

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,7 @@ header {
   font-size: 16px;
 }
 
-.nav-links-active {
+.nav-link-active {
   color: #f61253;
   text-decoration: underline;
   text-decoration-color: #f61253;
@@ -57,7 +57,7 @@ header {
   font-size: 15px;
 }
 
-.search-close-btn {
+.close-search-icon {
   height: 20px;
   width: 20px;
   cursor: pointer;
@@ -65,6 +65,14 @@ header {
   color: #000000;
   left: 217px;
   bottom: 7px;
+}
+
+.search-icon {
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+  margin-right: 15px;
+  display: none;
 }
 
 .nav-controls li:nth-child(2) {
@@ -167,7 +175,7 @@ header {
   margin-right: auto;
 }
 
-.cart-close-btn {
+.close-cart-icon {
   height: 25px;
   width: 25px;
   cursor: pointer;
@@ -195,4 +203,29 @@ header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
+}
+
+@media (max-width: 1400px) {
+}
+
+@media (max-width: 1340px) {
+  .search-input-container {
+    /* display: none; */
+  }
+
+  .search-icon {
+    /* display: block; */
+  }
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 1024px) {
+}
+
+@media (max-width: 969px) {
+}
+
+@media (max-width: 768px) {
 }
