--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -52,9 +52,10 @@
 .browse-section {
   background-color: #f4f2f2;
   padding: 0 10%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   align-items: center;
+  justify-content: space-evenly;
   height: 24vh;
 }
 
@@ -271,4 +272,23 @@
   color: #fff;
   font-size: 25px;
   cursor: pointer;
+}
+
+@media (max-width: 1400px) {
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 1024px) {
+  .browse-section {
+    grid-template-columns: repeat(4, 1fr);
+    height: 45vh;
+  }
+}
+
+@media (max-width: 969px) {
+}
+
+@media (max-width: 768px) {
 }
