--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -26,7 +26,7 @@
 
 .dashboard-tab-active {
   background-color: #fff;
-  border-right: 1px solid #1e2126;
+  /* border-right: 1px solid #1e2126; */
 }
 
 .dashboard-tab-inactive {
