--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -89,7 +89,7 @@
 
 .explore-section {
   padding: 50px 10%;
-  border-bottom: 1px solid #f4f4f4;
+  border-bottom: 1px solid #f8f8f8;
 }
 
 .explore-tags {
@@ -194,12 +194,23 @@
   cursor: pointer;
 }
 
-.explore-curve {
+.explore-curve-1 {
   width: 100%;
   height: 100px;
 }
 
-.explore-curve-bg {
+.explore-curve-bg-1 {
+  width: 100%;
+  height: 100px;
+}
+
+.explore-curve-2 {
+  width: 100%;
+  height: 100px;
+  transform: rotate(180deg);
+}
+
+.explore-curve-bg-2 {
   width: 100%;
   height: 100px;
 }
@@ -210,15 +221,16 @@
   padding: 10% 10%;
   display: flex;
   justify-content: space-between;
-  height: 200px;
+  height: 250px;
+  background-color: #f8f8f8;
 }
 
 .feature-single {
-  /* background-color: #fff; */
+  background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   /* padding: 30px; */
   width: 22%;
-  height: 220px;
+  height: 250px;
   border: 5px;
   display: flex;
   justify-content: center;
@@ -229,7 +241,7 @@
   display: flex;
   align-items: center;
   padding: 10% 10%;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 
 .mailinglist-heading {
@@ -244,7 +256,6 @@
 
 .mailinglist-form {
   display: flex;
-  align-items: center;
 }
 
 .mailinglist-input {
@@ -252,13 +263,14 @@
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   width: 18vw;
-  border: 1px solid #f8f8f8;
+  border: 1px solid #ccc;
   font-size: 16px;
   padding: 0 7px;
 }
 
 .mailinglist-btn {
   background-color: #f61253;
+  border: 1px solid #f61253;
   height: 40px;
   width: 80px;
   color: #fff;
