--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -216,25 +216,34 @@
 }
 
 .features-section {
-  /* border-top: 1px solid #ccc; */
-  /* border-bottom: 1px solid #ccc; */
   padding: 10% 10%;
   display: flex;
   justify-content: space-between;
-  height: 250px;
   background-color: #f8f8f8;
 }
 
 .feature-single {
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  /* padding: 30px; */
-  width: 22%;
+  width: 30%;
   height: 250px;
   border: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.feature-single-icon {
+  font-size: 3.5rem;
+  margin-bottom: 30px;
+  color: #f61253;
+}
+
+.feature-single-text {
+  font-size: 1.3rem;
+  text-align: center;
+  font-weight: 600;
 }
 
 .mailinglist-section {
@@ -254,6 +263,16 @@
   line-height: 25px;
 }
 
+.mailinglist-col-1 {
+  width: 60%;
+}
+
+.mailinglist-col-2 {
+  width: 40%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .mailinglist-form {
   display: flex;
 }
@@ -262,7 +281,7 @@
   height: 40px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  width: 18vw;
+  width: 20vw;
   border: 1px solid #ccc;
   font-size: 16px;
   padding: 0 7px;
