--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -51,12 +51,12 @@
 
 .browse-section {
   background-color: #f4f2f2;
-  padding: 0 10%;
+  padding: 1.5rem 10%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
   justify-content: space-evenly;
-  height: 24vh;
+  /* height: 24vh; */
 }
 
 .browse-category {
@@ -71,7 +71,7 @@
   width: 100px;
   background-color: #fff;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   display: flex;
@@ -120,8 +120,9 @@
 
 .explore-items {
   display: grid;
-  grid-template-columns: repeat(4, 23%);
-  justify-content: space-between;
+  grid-template-columns: repeat(4, 1fr);
+  /* justify-content: space-between; */
+  column-gap: 3%;
   row-gap: 40px;
   cursor: pointer;
   min-height: 60vh;
@@ -306,20 +307,60 @@
 }
 
 @media (max-width: 1400px) {
+  .explore-items {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 3.5%;
+  }
 }
 
 @media (max-width: 1200px) {
 }
 
+@media (max-width: 1080px) {
+}
+
 @media (max-width: 1024px) {
   .browse-section {
     grid-template-columns: repeat(4, 1fr);
-    height: 45vh;
+    row-gap: 15px;
   }
 }
 
 @media (max-width: 969px) {
+  .explore-items {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5%;
+  }
+
+  .features-section {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .feature-single {
+    width: 40%;
+    margin: 0 auto;
+    height: 220px;
+    padding: 0 10px;
+  }
+
+  .feature-single:nth-child(3) {
+    margin: 5% auto 0;
+  }
 }
 
 @media (max-width: 768px) {
+  .explore-tags {
+    flex-wrap: wrap;
+  }
+
+  .explore-tag {
+    margin-bottom: 7px;
+  }
+}
+
+@media (max-width: 600px) {
+  .explore-items {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
