--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@ header {
   background-color: #1e2126;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: fixed;
   width: 80%;
   height: 90px;
@@ -41,6 +42,10 @@ header {
 
 .nav-links li:hover {
   color: #f61253;
+}
+
+.nav-hamburger-wrapper {
+  display: none;
 }
 
 .search-input-container {
@@ -245,19 +250,35 @@ header {
 }
 
 @media (max-width: 1400px) {
-}
-
-@media (max-width: 1340px) {
   .search-input-container {
-    /* display: none; */
+    display: none;
   }
 
   .search-icon {
-    /* display: block; */
+    display: block;
   }
 }
 
 @media (max-width: 1200px) {
+}
+
+@media (max-width: 1080px) {
+  .nav-links {
+    display: none;
+  }
+
+  .nav-controls {
+  }
+
+  .nav-hamburger-wrapper {
+    display: flex;
+  }
+
+  .hamburger-wrapper {
+    height: 25px;
+    width: 25px;
+    color: #ffffff;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -267,4 +288,7 @@ header {
 }
 
 @media (max-width: 768px) {
+}
+
+@media (max-width: 600px) {
 }
