--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@ header {
   height: 90px;
   z-index: 1;
   /* border-bottom: 1px solid #dfdede; */
+  top: 0;
 }
 
 .img-logo {
@@ -140,7 +141,8 @@ header {
 .cart-container {
   position: fixed;
   right: 0;
-  height: 100%;
+  top: 0;
+  height: 100vh;
   width: 30%;
   background-color: #fff;
   border-left: 1px solid #ccc;
