--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -123,7 +123,15 @@
 }
 
 .single-ticket-img {
+  object-fit: contain;
+  height: 100%;
+  width: 100%;
+}
+
+.single-ticket-text {
   width: 80%;
+  font-size: 17px;
+  font-weight: 600;
 }
 
 .single-ticket-tag {
@@ -140,7 +148,7 @@
 
 .single-ticket-btn {
   width: 45%;
-  font-size: 16px;
+  font-size: 15px;
   height: 30px;
   border-radius: 3px;
   cursor: pointer;
@@ -151,7 +159,18 @@
   color: #f61253;
 }
 
+.single-ticket-btn-view:hover {
+  background-color: #f61253;
+  color: #ffffff;
+}
+
 .single-ticket-btn-edit {
   background-color: #f61253;
   color: #ffffff;
+}
+
+.single-ticket-btn-edit:hover {
+  border: 1px solid #f61253;
+  color: #f61253;
+  background-color: #ffffff;
 }
