--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,6 +27,10 @@ header {
   /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
+.nav-link-home {
+  display: none;
+}
+
 .nav-links li {
   margin-right: 50px;
   font-weight: bold;
@@ -43,6 +47,10 @@ header {
 
 .nav-links li:hover {
   color: #f61253;
+}
+
+.nav-link-close-menu {
+  display: none;
 }
 
 .nav-hamburger-wrapper {
@@ -273,13 +281,53 @@ header {
   }
 
   .nav-hamburger-wrapper {
-    display: flex;
+    display: block;
   }
 
-  .hamburger-wrapper {
+  .nav-hamburger-menu {
     height: 25px;
     width: 25px;
     color: #ffffff;
+    cursor: pointer;
+  }
+
+  .nav-link-logo {
+    display: none;
+  }
+
+  .nav-link-home {
+    display: block;
+    margin-top: 80px !important;
+  }
+
+  .nav-links-full {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    z-index: 2;
+  }
+
+  .nav-link-close-menu {
+    right: 15px;
+    top: 15px;
+    display: block;
+    position: absolute;
+  }
+
+  .nav-link-close-menu-icon {
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+    color: #ffffff;
+  }
+
+  .nav-link {
+    margin-top: 40px;
   }
 }
 
