--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -62,8 +62,13 @@
 
 .dashboard-main {
   width: 88%;
-  margin: 20px 15px;
+  margin: 20px 0;
   height: calc(100% - 40px);
+}
+
+.btn-create-ticket-wrapper {
+  margin: 0 30px;
+  padding-bottom: 15px;
 }
 
 .btn-create-ticket {
@@ -80,9 +85,8 @@
 }
 
 .dashboard-main-wrapper {
-  height: calc(100% - 40px);
+  height: 100%;
   width: 100%;
-  padding-top: 20px;
   overflow-y: auto;
 }
 
@@ -91,6 +95,8 @@
   grid-template-columns: repeat(3, 30%);
   column-gap: 5%;
   row-gap: 3%;
+  margin: 0 30px 150px;
+  padding-top: 15px;
 }
 
 .dashboard-main-single-shimmer {
@@ -98,7 +104,7 @@
 }
 
 .dashboard-main-single-ticket {
-  /* border: 1px solid #ccc; */
+  border: 1px solid #fefefe;
   height: 320px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 1.5px 4px;
   border-radius: 5px;
