--- a/src/pages/Dashboard/Modals/CreateTicket/CreateTicket.css
+++ b/src/pages/Dashboard/Modals/CreateTicket/CreateTicket.css
@@ -3,7 +3,7 @@
   border-radius: 5px;
   padding: 15px 20px;
   border: 1px solid #888;
-  width: 70%;
+  width: 65%;
   height: 82%;
   display: flex;
   flex-direction: column;
@@ -11,4 +11,10 @@
 
 .create-ticket-container {
   margin-top: 30px;
+}
+
+.create-ticket-modal-top-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
 }
