--- a/src/pages/Dashboard/Modals/Modals.css
+++ b/src/pages/Dashboard/Modals/Modals.css
@@ -31,7 +31,7 @@
 .modal-top-row {
   display: flex;
   align-items: center;
-  margin-bottom: 40px;
+  /* margin-bottom: 10px; */
 }
 
 .modal-body {
