--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -73,9 +73,9 @@
 
 .btn-create-ticket {
   font-size: 16px;
-  border: 2px solid#f61253;
-  color: #f61253;
-  border-radius: 5px;
+  color: #fff;
+  background-color: #f61253;
+  border-radius: 3px;
   padding: 0 15px;
   height: 40px;
   cursor: pointer;
