--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -150,6 +150,7 @@
   height: 100%;
   width: 100%;
   transition: transform 0.2s ease-in-out;
+  object-fit: contain;
 }
 
 .explore-item-img:hover {
