--- a/src/pages/BuyTickets/BuyTickets.css
+++ b/src/pages/BuyTickets/BuyTickets.css
@@ -1,9 +1,9 @@
 .buy-tickets-container {
-  padding: 10% 10% 7%;
+  padding: 10% 10% 2%;
 }
 
 .buy-tickets-wrapper {
-  height: 60vh;
+  height: 70vh;
 }
 
 .buy-tickets-section {
@@ -13,7 +13,31 @@
 }
 
 .buy-tickets-form {
-  width: 35%;
+  width: 30%;
   display: flex;
   flex-direction: column;
+}
+
+.buy-tickets-input {
+  height: 35px;
+  margin-bottom: 25px;
+  font-size: 16px;
+  padding: 0 5px;
+}
+
+.buy-tickets-category {
+  height: 35px;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.buy-tickets-items {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 5%;
+  row-gap: 40px;
+  width: 60%;
+  height: 100%;
+  overflow-y: auto;
+  padding: 0 20px 50px;
 }
