--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -125,7 +125,6 @@
   /* justify-content: space-between; */
   column-gap: 3%;
   row-gap: 40px;
-  cursor: pointer;
   min-height: 60vh;
 }
 
@@ -151,6 +150,7 @@
   width: 100%;
   transition: transform 0.2s ease-in-out;
   object-fit: contain;
+  z-index: 0;
 }
 
 .explore-item-img:hover {
