--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -134,6 +134,7 @@
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  cursor: pointer;
 }
 
 .explore-item:hover {
