--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ input {
   animation-iteration-count: infinite;
   animation-name: shimmer;
   animation-timing-function: linear;
-  background: #ddd;
+  background: #f0f4f8;
   background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
   background-size: 100% 100%;
   height: 100%;
