--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -181,6 +181,11 @@
 .explore-item-venue {
   padding: 0 7px;
   opacity: 0.5;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
 }
 
 .explore-more {
